--- a/01_HTML/03_표관련태그.html
+++ b/01_HTML/03_표관련태그.html
@@ -5,12 +5,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>표 관련 태그</title>
-	<!-- <style>
-		td{
+	<style>
+		/* td{
 			width: 80px;
 			height: 80px;
+		} */
+		thead{
+			background-color: gold;
 		}
-	</style> -->
+		/* tbody{
+			background-color:gray;
+		} */
+		/* thead로 정하지 않으면 다 tbody */
+		tfoot{
+			background-color: hotpink;
+		}
+	</style>
 </head>
 <body>
 	<h1>표 관련 태그</h1>
@@ -121,6 +131,45 @@
 			<!-- <td></td> -->
 		</tr>
 	</table>
+
+	<h3>테이블 태그의 구조 설정</h3>
+	<table border="">
+		<thead>
+			<tr>
+				<th>이름</th>
+				<th>나이</th>
+				<th>주소</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>문인수</td>
+				<td>20</td>
+				<td>경기도 광주시</td>
+			</tr>
+			<tr>
+				<td>홍길동</td>
+				<td>25</td>
+				<td>서울특별시</td>
+			</tr>
+			<tr>
+				<td>이몽룡</td>
+				<td>18</td>
+				<td>경기도 안양시</td>
+			</tr>
+
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="2">총 인원</td>
+				<td>3명</td>
+			</tr>
+		</tfoot>
+	</table>
+
+
+
+
 	<br><br><br><br><br>
 </body>
 </html>
