--- a/01_HTML/08_폼관련태그.html
+++ b/01_HTML/08_폼관련태그.html
@@ -76,19 +76,19 @@
 	<form>
 		<!-- `type="text"` : 한 줄짜리 텍스트를 입력할 수 있는 상자-->
 		<label>아이디 : <input type="text" name="userId"
-			maxlength="15" size="20"
+			minlength="5" maxlength="15" size="20"
 			placeholder="아이디를 입력하세요." value="kh"></label>
 		<h4>* HTML5에서 type="text"에서 새로 추가된 기능</h4>
 		<!-- `<datalist>` 태그를 사용하면 텍스트 필드에서 데이터 목록 중에서 값을 선택하도록 만들 수 있다. -->
 		<label>색상 : <input type="text" name="color" list="myColor"></label>
-
+		<!-- datalist의 id명을 input의 속성 list의 값(list="id명")으로 넣는다 -->
 		<datalist id="myColor">
 			<option value="black">검정색</option>
 			<option value="white">하얀색</option>
 			<option value="skyblue">하늘색</option>
 		</datalist>
 		<br><br>
-색
+
 		<!-- `type="password"` : 비밀번호를 입력할 수 있는 텍스트 상자 -->
 		<label>비밀번호 : <input type="password" name="userPwd"
 			maxlength="15" size="20"
@@ -96,7 +96,7 @@
 
 		<br><br>
 		<!-- `type="search"`, `type="url"`, type="email", type="tel"
-			겉모습은 테스트필드와 비슷하지만 각각이 정보에 맞게 세분화된 기능을 제공하는 텍스트 상자이다.
+			겉모습은 텍스트필드와 비슷하지만 각각이 정보에 맞게 세분화된 기능을 제공하는 텍스트 상자이다.
 		-->
 		<label>검색 : <input type="search" name="searchTest"
 			placeholder="검색할 내용 입력"></label>
@@ -107,7 +107,7 @@
 
 		<br><br>
 
-		<label>이메일 : <input type="email" name="email" placeholder="이메일을 입력하세요."></label>
+		<label>이메일 : <input type="email" name="email" required placeholder="이메일을 입력하세요."></label>
 
 		<br><br>
 
@@ -137,7 +137,6 @@
 		<!--  `type="range"` : 슬라이드 바를 통한 숫자 지정 가능-->
 		<input type="range" name="point" min="0" max="1000"
 			step="100" value="300">
-
 
 
 		<br><br>
@@ -244,7 +243,7 @@
 		<br><br>
 
 		<!-- `type="hidden"`
-			- 특정 값을 노출시키지 않고 싶으
+			- 특정 값을 노출시키지 않고 싶은 경우에 사용
 		-->
 		<input type="hidden" name="hiddenValue" value="1">
 
@@ -281,7 +280,7 @@
 
 		-->
 		<label for="national">국적</label>
-		<select name="national" id="national" multiple size="2">
+		<select name="national" id="national" multiple size="1">
 			<!--`multiple` : 중복 선택 가능
 				`size` : 화면에 보이는 개수
 			-->
@@ -321,7 +320,7 @@
 			- 전체 크기 중에서 얼마나 차지하고 있는지 표현할 때 사용한다.
 		-->
 
-		<meter min="0" max="100" value="71" low="60" high="90"></meter>
+		<meter min="0" max="100" value="91" low="60" high="90"></meter>
 
 
 		<br><br>
