--- a/02_CSS/02_CSS선택자2.html
+++ b/02_CSS/02_CSS선택자2.html
@@ -187,5 +187,76 @@
 	<button>버튼 1</button>
 	<button disabled>버튼 2</button>
 
+	<hr>
+
+	<h2>6. 일반 구조 선택자</h2>
+	<!--
+		특정한 위치에 있는 태그 선택(위치로 구분)
+
+	-->
+	<!-- div#test2>p*5{테스트 $}+pre{테스트 6} -->
+	<div id="test2">
+		<p>테스트 1</p>
+		<p>테스트 2</p>
+		<p>테스트 3</p>
+		<p>테스트 4</p>
+		<p>테스트 5</p>
+		<pre>테스트 6</pre>
+	</div>
+
+	<hr>
+
+	<h2>7. 형태 구조 선택자</h2>
+	<!--
+		특정한 위치에 있는 태그 선택(태그 별로 구분)
+	-->
+	<!-- div#test3>pre{테스트 0}+p*5{테스트 $}+pre{테스트 6} -->
+	<div id="test3">
+		<!-- <pre>테스트 0</pre> -->
+		<p>테스트 1</p>
+		<p>테스트 2</p>
+		<p>테스트 3</p>
+		<p>테스트 4</p>
+		<p>테스트 5</p>
+		<pre>테스트 6</pre>
+	</div>
+
+	<hr>
+	<h2>8. 문자 선택자</h2>
+	<!--
+		태그 내부에서 특정 조건의 문자를 선택하는 선택자
+	-->
+
+
+	<!-- div#test4>p -->
+	<div id="test4">
+		<p>
+			지난 6일(현지시간) 일론 머스크는 자신의 트위터에 "최근 실현하지 않은 이익이 조세회피 수단이 되고 있다는 것에 대해 논의가 있었다"며 "내 테슬라 주식 10%를 매각하는 방식에 대해 (어떻게 생각하는 지) 제안한다"는 글을 게재했다.
+
+글과 함께 게재된 투표를 통해 일론 머스크의 주식 매각 방식에 대한 찬반 설문이 진행됐다. 약 하루 만에 351만9252명이 온라인 투표에 참여했고, 찬성이 57.9%로 반대(42.1%) 의견보다 15% 가량 높았다.
+
+투표가 종료된 이후 7일(현지시간) 일론 머스크는 돌연 트위터 계정 이름을 'Lorde Edge'로 변경하며 심경의 변화를 드러냈다.
+
+
+이에 대해 미국 온라인 매체인 <미디어에이트(MEDIA ITE)>는 "Lorde Edge라는 표현은 충격적이거나 허무주의적인 의견을 게시하거나 실제로 믿지 않을 수 있는 사람을 가리키는 용어"라며 "의도적으로 격분한 반응을 드러내기 위함으로 보인다"고 전했다.
+		</p>
+	</div>
+
+	<hr>
+
+	<h2>9. 부정 선택자</h2>
+	<!--
+		지금까지의 선택자에 대해 반대로 적용하는 선택자
+	-->
+	<!-- div#test5>p*5{테스트 $} -->
+	<div id="test5">
+		<p class="p">테스트 1</p>
+		<p>테스트 2</p>
+		<p>테스트 3</p>
+		<p>테스트 4</p>
+		<p class="p">테스트 5</p>
+	</div>
+
+
 </body>
 </html>
