--- a/02_CSS/02_CSS선택자2.html
+++ b/02_CSS/02_CSS선택자2.html
@@ -196,6 +196,7 @@
 	-->
 	<!-- div#test2>p*5{테스트 $}+pre{테스트 6} -->
 	<div id="test2">
+		<!-- <pre>테스트 0</pre> -->
 		<p>테스트 1</p>
 		<p>테스트 2</p>
 		<p>테스트 3</p>
@@ -250,6 +251,7 @@
 	-->
 	<!-- div#test5>p*5{테스트 $} -->
 	<div id="test5">
+		<!-- <pre>테스트 0</pre> -->
 		<p class="p">테스트 1</p>
 		<p>테스트 2</p>
 		<p>테스트 3</p>
