--- a/03_웹문서구조/06_웹문서구조_실습2_시맨틱.html
+++ b/03_웹문서구조/06_웹문서구조_실습2_시맨틱.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<!-- div#wrap>header+menubar+aside+(section>article*2)+footer -->
-	<div id="wrap">
+	<!-- <div id="wrap">
 		<div id="header">
 			<header>
 				<div id="logo"></div>
@@ -22,6 +22,24 @@
 			<aside></aside>
 			<article id="a1"></article>
 			<article id="a2"></article>
+		</section>
+		<footer></footer>
+	</div> -->
+
+
+	<div id="wrap2">
+		<header>
+			<div id="header_contents">
+				<div id="header_1"></div>
+				<div id="header_2"></div>
+				<div id="header_3"></div>
+			</div>
+			<nav></nav>
+		</header>
+		<section>
+			<aside></aside>
+			<article id="content_1"></article>
+			<article id="content_2"></article>
 		</section>
 		<footer></footer>
 	</div>
