--- a/01_HTML/02_목록관련태그.html
+++ b/01_HTML/02_목록관련태그.html
@@ -18,6 +18,14 @@
 		<li>jQuery</li>
 	</ul>
 
+	<h2>HTML List</h2>
+	<ul>
+		<li>html</li>
+		<li>css</li>
+		<li>javascript</li>
+		<li>jquery</li>
+	</ul>
+
 	<h3>순서 있는 목록 태그</h3>
 	<h4>화면 구현 수업 내용</h4>
 	<ol type="1" reversed start="6">
@@ -25,6 +33,14 @@
 		<li>CSS</li>
 		<li>JavaScript</li>
 		<li>jQuery</li>
+	</ol>
+
+	<h2>HTML List</h2>
+	<ol type="a" start="5">
+		<li>html</li>
+		<li>css</li>
+		<li>javascript</li>
+		<li>jquery</li>
 	</ol>
 
 	<h3>설명 목록 태그</h3>
