--- a/MakingChrome/momentum/index4.html
+++ b/MakingChrome/momentum/index4.html
@@ -5,17 +5,22 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Momentum App</title>
-	<link rel="stylesheet" href="./style4.css">
+	<link rel="stylesheet" href="./css/style4.css">
 </head>
 <body>
-	<form id="login-form">
+	<form id="login-form" class="hidden">
 		<input required maxlength="15" type="text" placeholder="What is your name?" id="">
 		<button>Log In</button>
 		<a href="https://nomadcoders.co">Go to courses</a>
 	</form>
+	<h2 id="clock">00:00</h2>
+
+
 	<h1 id="greeting" class="hidden"></h1>
 
 
-	<script src="./app4.js"></script>
+
+	<script src="./js/greetings.js"></script>
+	<script src="./js/clock.js"></script>
 </body>
 </html>
