--- a/04_JavaScript/03_배열.html
+++ b/04_JavaScript/03_배열.html
@@ -32,6 +32,99 @@
 	<button id="btn1">실행 확인</button>
 	<div id="area1" class="area"></div>
 
+	<hr>
+	<h2>2. 배열의 메소드</h2>
+	<p>
+		배열도 하나의 객체이기 때문에 배열에서 활용할 수 있는 메소드들이 존재한다.
+	</p>
+
+	<h3>1) indexOf()</h3>
+	<p>
+		- 배열에서 요소가 위치한 인덱스를 반환한다.
+	</p>
+
+	<button id="btn2">실행 확인</button>
+
+	<div id="area2" class="area"></div>
+
+
+	<hr>
+
+	<h3>2) concat()</h3>
+	<p>
+		- 여러 개의 배열을 결합하여 새로운 배열을 반환한다.
+		- 원본 배열에 영향을 미치지 않는다.
+	</p>
+	<button id="btn3">실행 확인</button>
+
+	<div id="area3" class="area"></div>
+
+
+	<hr>
+	<h3>3) join()</h3>
+	<p>
+		- 배열의 요소들을 결합해서 하나의 문자열로 반환한다.
+	</p>
+	<button id="btn4">실행 확인</button>
+
+	<div id="area4" class="area"></div>
+
+	<hr>
+
+	<h3>4) reverse()</h3>
+	<p>
+		- 원본 배열의 순서를 뒤집는 메소드
+	</p>
+	<button id="btn5">실행 확인</button>
+	<div id="area5" class="area"></div>
+
+
+	<hr>
+
+	<h3>5) sort()</h3>
+	<p>
+		- 배열을 오름차순(문자기준)으로 정렬하는 메소드
+	</p>
+	<button id="btn6">실행 확인</button>
+	<div id="area6" class="area"></div>
+
+	<hr>
+
+	<h3>6) `push()`, `pop()`</h3>
+	<p>
+		- `push()` : 배열의 맨 뒤에 요소를 추가한다.
+		- `pop()` : 배열의 맨 뒤의 요소를 반환한 후 제거한다.
+	</p>
+
+	<button id="btn7">실행 확인</button>
+	<div id="area7" class="area"></div>
+
+	<hr>
+
+	<h3>7) `unshift()`, `shift()`</h3>
+	<p>
+		- `unshift()` : 배열의 맨 앞의 요소를 추가한다.
+		- `shift()` : 배열의 맨 앞의 요소를 반환 후 제거한다.
+	</p>
+
+	<button id="btn8">실행 확인</button>
+	<div id="area8" class="area"></div>
+
+	<hr>
+
+	<h3>8) `slice()`, `splice()`</h3>
+	<p>
+		- `slice()` : 배열의 요소를 뽑아내는 메소드
+		-> **원본 배열에** 영향을 **미치지 않는다**.
+		- `splice()` : 배열의 특정 인덱스 위치에 요소 제거 및 추가하는 메소드
+		-> 원본 배열에 **영향을 미친다**.
+	</p>
+
+	<button id="btn9">실행 확인</button>
+	<div id="area9" class="area"></div>
+
+
+
 
 	<br><br><br><br><br><br>
 	<br><br><br><br><br><br>
