--- a/MakingChrome/momentum/index.html
+++ b/MakingChrome/momentum/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Momentum</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
 		<h1 id="title">Grab me 3!</h1>
 	</div>
 	hihi
-	<!-- <script src="./app.js"></script> -->
-	<!-- <script src="./app2.js"></script> -->
-	<script src="./app3.js"></scripts>
+	<!-- <script src="./js/app.js"></script> -->
+	<!-- <script src="./js/app2.js"></script> -->
+	<script src="./js/app3.js"></scripts>
 </body>
 </html>
