--- a/MakingChrome/momentum/index4.html
+++ b/MakingChrome/momentum/index4.html
@@ -13,7 +13,7 @@
 		<button>Log In</button>
 		<a href="https://nomadcoders.co">Go to courses</a>
 	</form>
-	<h2 id="clock">00:00</h2>
+	<h2 id="clock"></h2>
 
 
 	<h1 id="greeting" class="hidden"></h1>
