--- a/MakingChrome/momentum/index4.html
+++ b/MakingChrome/momentum/index4.html
@@ -18,9 +18,14 @@
 
 	<h1 id="greeting" class="hidden"></h1>
 
-
+	<div id="quote">
+		<span></span>
+		<span></span>
+	</div>
 
 	<script src="./js/greetings.js"></script>
 	<script src="./js/clock.js"></script>
+	<script src="./js/quote.js"></script>
+	<script src="./js/background.js"></script>
 </body>
 </html>
