--- a/MakingChrome/momentum/index4.html
+++ b/MakingChrome/momentum/index4.html
@@ -8,15 +8,20 @@
 	<link rel="stylesheet" href="./css/style4.css">
 </head>
 <body>
+	<h2 id="clock"></h2>
+
 	<form id="login-form" class="hidden">
 		<input required maxlength="15" type="text" placeholder="What is your name?" id="">
 		<button>Log In</button>
 		<a href="https://nomadcoders.co">Go to courses</a>
 	</form>
-	<h2 id="clock"></h2>
-
 
 	<h1 id="greeting" class="hidden"></h1>
+
+	<form id="todo-form">
+		<input type="text" placeholder="Write a To Do and Press Enter" required>
+	</form>
+	<ul id="todo-list"></ul>
 
 	<div id="quote">
 		<span></span>
@@ -27,5 +32,6 @@
 	<script src="./js/clock.js"></script>
 	<script src="./js/quote.js"></script>
 	<script src="./js/background.js"></script>
+	<script src="./js/todolist.js"></script>
 </body>
 </html>
