--- a/NewLecture/hi/index.html
+++ b/NewLecture/hi/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<script defer src="./variable.js"></script>
+	<script defer src="./function.js"></script>
 </head>
 <body>
 	<h1>hihi</h1>
