--- a/NewLecture/hi/index.html
+++ b/NewLecture/hi/index.html
@@ -7,6 +7,8 @@
 	<title>Document</title>
 	<script defer src="./variable.js"></script>
 	<script defer src="./function.js"></script>
+	<script defer src="./class.js"></script>
+	<script defer src="./object.js"></script>
 </head>
 <body>
 	<h1>hihi</h1>
