--- a/NewLecture/hi/index.html
+++ b/NewLecture/hi/index.html
@@ -9,6 +9,8 @@
 	<script defer src="./function.js"></script>
 	<script defer src="./class.js"></script>
 	<script defer src="./object.js"></script>
+	<script defer src="./array.js"></script>
+	<script defer src="./array_api.js"></script>
 </head>
 <body>
 	<h1>hihi</h1>
