--- a/NewLecture/hi/index.html
+++ b/NewLecture/hi/index.html
@@ -11,8 +11,9 @@
 	<script defer src="./object.js"></script>
 	<script defer src="./array.js"></script>
 	<script defer src="./array_api.js"></script>
+	<script defer src="./json.js"></script>
 </head>
 <body>
-	<h1>hihi</h1>
+	<h1>hihi/</h1>
 </body>
 </html>
