--- a/04_JavaScript/10_정규표현식.html
+++ b/04_JavaScript/10_정규표현식.html
@@ -7,6 +7,9 @@
 	<title>정규표현식</title>
 	<script defer src="./10_정규표현식.js"></script>
 	<style>
+		body{
+			font-family: hack;
+		}
 		.area {
 			border: 1px solid;
 			/* width: 500px; */
@@ -35,5 +38,27 @@
 
 	<button id="btn1">실행 확인</button>
 	<div id="area1" class="area"></div>
+
+	<h2>플래그 문자</h2>
+	<p>
+		- 플래그 문자는 정규표현식의 검색 방식을 설정하기 위해 사용한다.
+		- 순서와 상관없이 하나 이상의 플래그를 동시에 설정할 수 있다.
+	</p>
+	<ul>
+		<li>i : 대소문자를 가리지 않고 비교한다.</li>
+		<li>g : 전역으로 비교를 수행한다.</li>
+		<li>m : 여러 줄을 비교를 수행한다.</li>
+	</ul>
+
+	<button id="btn2">실행 확인</button>
+	<div id="area2" class="area"></div>
+
+	<h2>메타 문자</h2>
+	<p>
+		- 특정 메타 문자를 통해 정규식으로 특정 패턴을 제시할 수 있다.
+	</p>
+	<button id="btn3">실행 확인</button>
+	<div id="area3" class="area"></div>
+
 </body>
 </html>
