--- a/MakingChrome/momentum/index4.html
+++ b/MakingChrome/momentum/index4.html
@@ -28,10 +28,16 @@
 		<span></span>
 	</div>
 
+	<div id="weather">
+		<span></span>
+		<span></span>
+	</div>
+
 	<script src="./js/greetings.js"></script>
 	<script src="./js/clock.js"></script>
 	<script src="./js/quote.js"></script>
 	<script src="./js/background.js"></script>
 	<script src="./js/todolist.js"></script>
+	<script src="./js/weather.js"></script>
 </body>
 </html>
