--- a/NewLecture/hi/index.html
+++ b/NewLecture/hi/index.html
@@ -12,6 +12,8 @@
 	<script defer src="./array.js"></script>
 	<script defer src="./array_api.js"></script>
 	<script defer src="./json.js"></script>
+	<script defer src="./async/callback.js"></script>
+	<script defer src="./async/callback-to-promise.js"></script>
 </head>
 <body>
 	<h1>hihi/</h1>
