--- a/04_JavaScript/09_이벤트.html
+++ b/04_JavaScript/09_이벤트.html
@@ -67,8 +67,9 @@
 		<label for="pass2">비밀번호 확인: </label>
 		<input type="password" name="pass2" id="pass2"> <br><br>
 
-		<!-- <input type="submit" value="제출" onclick="return passwordCheck()"> -->
-		<input type="submit" value="제출">
+		<input type="submit" value="제출" onclick="return passwordCheck()">
+		<!-- <input type="submit" value="제출"> -->
+		<!-- 새로고침 있음 -->
 	</form>
 
 	<h3>2) 기본 이벤트 제거 2</h3>
