--- a/CodingApple/JS&JQuery/index1.html
+++ b/CodingApple/JS&JQuery/index1.html
@@ -10,12 +10,48 @@
 </head>
 <body>
 	<h4 id="test">안녕하세요</h4>
+	<p class="greeting">안녕하세요</p>
+	<p class="greeting">안녕하세요</p>
+	<p class="greeting">안녕하세요</p>
+
+	<button class="btn">버튼btn</button>
+	<button class="btn">버튼btn</button>
+	<button class="btn">버튼btn</button>
 
 	<script>
 		$('#test').html('안녕');
 		$('#test').css('color', 'red');
+
+		//속성 만들어 넣기
 		$('#test').attr('ddd', 'dddss');
-		$('#test').attr('class', 'yellow-bg');
+		// $('#test').attr('class', 'yellow-bg');
+		$('#test').addClass('yellow-bg');
+
+		//하나밖에 못한다!!!!! 한꺼번에 다 못바뀜
+		document.getElementsByClassName('greeting')[0].innerHTML = '안녕';
+		document.getElementsByClassName('greeting')[1].innerHTML = '안녕';
+		document.getElementsByClassName('greeting')[2].innerHTML = '안녕';
+
+		//제이쿼리 장점1.
+		//제이쿼리는 한줄로 여러개를 한번에 변경할 수 있다!!
+		$('.greeting').html('안ㄴㅇ');
+		$('.greeting').eq(1).html('안뇽??')
+
+		//이벤트도 마찬가지!
+		// $('.btn').on('click', function(){
+		// 	//내용~
+		// })
+
+		//제이쿼리 장점2.
+		//쉽게 만드는 애니메이션UI
+		$('.btn').on('click', function(){
+			// $('.greeting').hide();
+			// $('.greeting').show();
+			// $('.greeting').slideUp();
+			// $('.greeting').slideDown();
+			$('.greeting').slideToggle();
+
+		})
 	</script>
 
 
