--- a/CodingApple/JS&JQuery/boot.html
+++ b/CodingApple/JS&JQuery/boot.html
@@ -212,7 +212,7 @@
 
 
 	<!-- 탭 유아이 -->
-	<div class="container mt-5" style="margin-bottom: ;">
+	<div class="container mt-5" style="margin-bottom: 500px;">
 		<ul class="list">
 			<li class="tab-button">Products</li>
 			<li class="tab-button active">Information</li>
@@ -229,6 +229,8 @@
 			<p>배송정보입니다. Shipping</p>
 		</div>
 	</div>
+
+	<script src="./tab.js"></script>
 
 	<script>
 
